# os

task#2/: task2.c
task#3/: CMakeLists.txt  main.c
